// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IMG SVG render correctly 1`] = `
<div
  className="sc-bdvvtL jFcxMn"
  onClick={[Function]}
  role="figure"
>
  <i
    className="sc-gsDKAQ kBvhNT"
  >
    <img
      alt=""
      className="sc-dkPtRN gvNhlX"
      src="SvgrURL"
    />
  </i>
</div>
`;

exports[`IMG SVG render correctly with height, width, color, motion, classname 1`] = `
<div
  className="sc-bdvvtL jFcxMn test class"
  onClick={[Function]}
  role="figure"
>
  <i
    className="sc-gsDKAQ dZSVlC"
  >
    <img
      alt="svg image"
      className="sc-dkPtRN gvNhlX"
      src="SvgrURL"
    />
  </i>
</div>
`;

exports[`OBJ SVG render correctly 1`] = `
<div
  className="sc-bdvvtL jFcxMn"
  onClick={[Function]}
  role="figure"
>
  <i
    className="sc-gsDKAQ kBvhNT"
  >
    
    <svg
      color="currentColor"
      height="1rem"
      role="none"
      width="1rem"
    />
  </i>
</div>
`;

exports[`OBJ SVG render correctly with height, width, color, motion, classname 1`] = `
<div
  className="sc-bdvvtL jFcxMn test class"
  onClick={[Function]}
  role="figure"
>
  <i
    className="sc-gsDKAQ dZSVlC"
  >
    
    <svg
      color="blue"
      height="2rem"
      role="none"
      width="2rem"
    />
  </i>
</div>
`;
